package com.luvio.login.utils

object TestTag {

    const val ONBOARDING_IMAGE = "ONBOARDING_IMAGE"
    const val TEXT_TITLE = "TEXT_TITLE"
    const val TEXT_DESCRIPTION = "TEXT_DESCRIPTION"
    const val NEXT_BUTTON = "NEXT_BUTTON"
    const val SKIP_BUTTON = "SKIP_BUTTON"
}